# caio

./: .gitignore  CMakeLists.txt  README.md  TODO.md  caio.c  caio.h  caio_generic.c  caio_generic.h  callstack.c  callstack.h  generic.c  generic.h  generic_array.c  generic_array.h  generic_pool.c  generic_pool.h  generic_stack.c  generic_stack.h  manifest.h.in  sleep.c  sleep.h  taskpool.c  taskpool.h
caio/: caio.c  caio.h  config.h.in  connection.c  connection.h  epoll.c  epoll.h  fdmon.c  fdmon.h  generic.c  generic.h  http.c  http.h  io_epoll.c  io_epoll.h  io_uring.c  io_uring.h  iouring.c  iouring.h  manifest.h.in  options.h.in  select.c  select.h  semaphore.c  semaphore.h  server.c  server.h  signal.c  signal.h  sleep.c  sleep.h  sleep_esp32.c  taskpool.c  taskpool.h  uring.c  uring.h
examples/: CMakeLists.txt  addr.c  addr.h  cat.c  cato.c  epoll_sleep.c  epoll_tcpserver.c  epoll_tcpserver.gdb  epoll_timer.c  fdmon_sleep.c  fdmon_tcpserver.c  fdmon_timeout.c  fdmon_timer.c  generator.c  iomodule_sleep.c  iomodule_timer.c  pingpong.c  pingpong.gdb  select_sleep.c  select_tcpserver.c  select_timer.c  select_timer.gdb  semaphore.c  server.c  sleep.c  sleep.gdb  tcpserver.c  tcpserver_epoll.c  tcpserver_iouring.c  timer.c  timer_epoll.c  uring.c  uring_cat.c  uring_tcpserver.c
tests/: CMakeLists.txt  test_generic_array.c  test_generic_pool.c
